Changed line 667 from max-width 767 to 768 to fix gap on iPad
@media only screen and (max-width: 768px) {

--- a/style-front.css
+++ b/style-front.css
@@ -664,7 +664,7 @@ section#custom_html-3 {
 /* Media Queries
 ---------------------------------------------------------------------------------------------------- */
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
 
 	.front-page-1 {
 		margin-top: 0;
